2009-04-30  Olaf Lenz  <lenzo@pckr97.mpip-mainz.mpg.de>

	* pbcjoin.tcl (pbcjoin): Some more improvements to "pbc
	join". Im my tests, I got a performance gain of about 50%.

2009-04-23  Olaf Lenz  <olenz@qwghlm>

	* pbcjoin.tcl: Thanks to Dan Lussier: significantly reduced memory
	footprint of "pbc join".

2009-02-10  Olaf Lenz  <olenz@true>

	* pbcjoin.tcl: Thanks to Axel Kohlmeyer, join now checks whether the pbc cell
	parameters are reasonable.

	* pbctools.tcl: Added implementation of vmdcon for VMD version
	before 1.8.7.
	
	* *.tcl: All functions use vmdcon now instead of "puts".

2009-01-21  Olaf Lenz  <olenz@true>

	* Advanced to version 2.5.

	* pbcbox.tcl, pbcwrap.tcl, pbctools.tex: Commands pbcwrap and
	pbcbox: Added option "-centersel" that takes a selection. The
	option "-center" does not take the $sel argument anymore, instead
	the keywords "com", "centerofmass", "bb" or "boundingbox" can be
	used to denote that the center of the box/wrapping is in the
	center of mass or the center of the bounding box of the given
	selection.

2008-11-20  Olaf Lenz  <lenzo@pckr76.mpip-mainz.mpg.de>

	* Advanced to version 2.4.
	
	* maintainer/: Added maintainer directory that contains scripts
	and notes for the maintainer.

	* pbcwrap.tcl, pbcunwrap.tcl, pbcjoin.tcl: Added option
	"-noverbose" for completeness.

	* doc/index.html: Now contains only link to the pbctools gfroge
	home page: http://www.espresso-pp.de/projects/pbctools/ 
	
	* doc/pbctools.tex: Translated doc/index.html to LaTeX.

2008-10-27  Olaf Lenz  <olenz@true>

	* doc/index.html: History and credits will be included from the
	NEWS and AUTHORS file in the future.

	* doc/ChangeLog: Moved one directory up.

	* NEWS, README, AUTHORS: Created files with release notes, basic
	docs and credits.

2008-10-04  Olaf Lenz  <olenz@qwghlm>

	* Advanced to version 2.3.

	* pbcbox.tcl, pbcwrap.tcl: Renamed option -rectangular to
	-orthorhombic (-rectangular still works).

	* doc/index.html: Updated docs.
