@@ -8,6 +8,6 @@ the following files
     doc/pbctools.html 
     doc/pbctools.pdf
 
-or to the plugins home page at
+or to the plugin's home page at
 
    http://www.espresso-pp.de/projects/pbctools
