@@ -1,10 +1,10 @@
 % Configuration file for tex4ht
 
-\Preamble{html,info,fn-in,NoFonts,p-width}
+\Preamble{html,info,fn-in,NoFonts,p-width,css-in}
 % html - html output
 % info - output options to log
 % css-in - inline css
-% fn-in - inline footnote
+% fn-in - inline footnotes
 % NoFonts                       % don't use fonts
 
 \begin{document}
